# Sky-Eye

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.yaml
.github/workflows/: deploy.yml
backend/: Dockerfile  Makefile  entrypoint.sh  main.py  pyproject.toml
backend/src/: main.py  schemas.py
backend/src/api/: process_router.py  router.py
backend/src/core/: authentication.py  settings.py
backend/src/utils/: enum.py  process_video.py  process_video_utils.py
backend/yolo/tracking/: tracker.py  tracking.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/VideoProcessor/: index.jsx
frontend/src/homepage/: Drone.jsx  index.jsx  index.scss
frontend/src/queue/: index.jsx
model/: generate_dataset.py
model /: fitting.py  generator.py  testing.py
my-app/: package-lock.json  package.json
my-app/src/: App.css  App.js
my-app/src/VideoProcessor/: index.jsx  index.scss
my-app/src/homepage/: index.jsx  index.scss
tracking /: tracker.py  tracking.py
