[tool.poetry]
name = "yolo-backend"
version = "0.1.0"
description = ""
authors = ["andrejcyrkunov <a.tsyrkunov@flipperdevices.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
